fixed word wrap for mobiles

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -252,6 +252,18 @@ a:hover {
 			justify-content: center;
 			img {
 				box-shadow: 5px 5px 10px;
+				@include tiny {
+					width: 100vw;
+					max-width: 100vw;
+					height: auto;
+					padding: 10px;
+				}
+				@include md {
+					width: 100%;
+					max-width: 100vw;
+					height: auto;
+					padding: 10px;
+				}
 			}
 		}
 		.responsive-card-author {
